<resources>
    <string name="app_name">App Design</string>
    <string name="login">Iniciar Sesión</string>
    <string name="registro">Registro</string>
    <string name="dashboard">Dashboard</string>
    <string name="gastronomia">Gastronomía</string>
    <string name="turismo">Turismo</string>
    <string name="saludmedicina">Salud y Medicina</string>
    <string name="finanzas">Finanzas</string>
    <string name="comercio">Ecommerce</string>
    <string name="arte">Arte y Creatividad</string>
    <string name="eventos">Eventos</string>
</resources>