<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorperfilazul3"
            android:scaleType="center"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="80dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/foto_perfil"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/perfil_git"
                android:padding="3dp"
                android:background="#2B4C5F"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:weightSum="2">

                <!--MIS DATOS-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_dashboard"/>
                    <Button
                        android:id="@+id/btndashboard"
                        android:textColor="@color/colorperfilblanco"
                        android:text="@string/dashboard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--FIN MIS DATOS-->

                <!--CREAR POST-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_restaurant"/>
                    <Button
                        android:id="@+id/CrearPublicacionOpcion"
                        android:text="@string/gastronomia"
                        android:textColor="@color/colorperfilblanco"
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--FIN CREAR POST-->


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <!--PUBLICACIONES-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/icon_turism"
                        android:layout_gravity="center"/>

                    <Button
                        android:id="@+id/PublicacionesOpcion"
                        android:textColor="@color/colorperfilblanco"
                        android:text="@string/turismo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--FIN PUBLICACIONES-->

                <!--USUARIOS-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/icon_medicina"
                        android:layout_gravity="center"/>

                    <Button
                        android:id="@+id/UsuarioOpcion"
                        android:text="@string/saludmedicina"
                        android:textColor="@color/colorperfilblanco"
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--FIN USUARIOS-->

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <!--CHAT-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/icon_finanzas"
                        android:layout_gravity="center"/>

                    <Button
                        android:id="@+id/ChatOpcion"
                        android:text="@string/finanzas"
                        android:textColor="@color/colorperfilblanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--FIN CHAT-->

                <!--SALIR-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/icon_comercio"
                        android:layout_gravity="center"/>

                    <Button
                        android:id="@+id/CerrarSesion"
                        android:text="@string/comercio"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/colorperfilblanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--FIN SALIR-->

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <!--CHAT-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/icon_evento"
                        android:layout_gravity="center"/>

                    <Button
                        android:id="@+id/btnevento"
                        android:text="@string/eventos"
                        android:textColor="@color/colorperfilblanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--FIN CHAT-->

                <!--SALIR-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/icon_art"
                        android:layout_gravity="center"/>

                    <Button
                        android:id="@+id/btnart"
                        android:text="@string/arte"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/colorperfilblanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--FIN SALIR-->

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>


</androidx.core.widget.NestedScrollView>